Add    - logo    - logo styles    - remove generated identifier images    - remove commented styles

--- a/index.html
+++ b/index.html
@@ -12,6 +12,10 @@
     <title>Furniture Place</title>
   </head>
   <body>
-    <header class="header">some header...</header>
+    <header class="header">
+      <div class="logo-box">
+        <img src="img/logo.png" alt="Felt" class="logo" />
+      </div>
+    </header>
   </body>
 </html>
