--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link
-      href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700"
+      href="https://fonts.googleapis.com/css?family=Lato:300,400,500,700"
       rel="stylesheet"
     />
     <link rel="stylesheet" href="css/style.css" />
@@ -15,6 +15,12 @@
     <header class="header">
       <div class="logo-box">
         <img src="img/logo.png" alt="Felt" class="logo" />
+      </div>
+      <div class="text-box">
+        <h1 class="heading-primary">
+          <span class="heading-primary-main">FELT</span>
+          <span class="heading-primary-sub">Furniture that everyone Loves</span>
+        </h1>
       </div>
     </header>
   </body>
