Add button animation

--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
       href="https://fonts.googleapis.com/css?family=Lato:300,400,500,700"
       rel="stylesheet"
     />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Indie+Flower&family=Nunito:wght@200&display=swap"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="css/style.css" />
     <title>Furniture Place</title>
   </head>
@@ -18,9 +22,10 @@
       </div>
       <div class="text-box">
         <h1 class="heading-primary">
-          <span class="heading-primary-main">FELT</span>
+          <span class="heading-primary-main">felt</span>
           <span class="heading-primary-sub">Furniture that everyone Loves</span>
         </h1>
+        <a href="#" class="btn btn-white btn-animated">Discover Us</a>
       </div>
     </header>
   </body>
