--- a/index.html
+++ b/index.html
@@ -17,15 +17,17 @@
   </head>
   <body>
     <header class="header">
-      <div class="logo-box">
-        <img src="img/logo.png" alt="Felt" class="logo" />
+      <div class="header__logo-box">
+        <img src="img/logo.png" alt="Felt" class="header__logo" />
       </div>
-      <div class="text-box">
+      <div class="header__text-box">
         <h1 class="heading-primary">
-          <span class="heading-primary-main">felt</span>
-          <span class="heading-primary-sub">Furniture that everyone Loves</span>
+          <span class="heading-primary--main">felt</span>
+          <span class="heading-primary--sub"
+            >Furniture that everyone Loves</span
+          >
         </h1>
-        <a href="#" class="btn btn-white btn-animated">Discover Us</a>
+        <a href="#" class="btn btn--white btn--animated">Discover Us</a>
       </div>
     </header>
   </body>
