Add about section
 - create a grid section for the about section
 - Add text content
 - Add utility classes and style them
 - Add button class and style it
 - Add animation to button

--- a/index.html
+++ b/index.html
@@ -30,6 +30,35 @@
         <a href="#" class="btn btn--white btn--animated">Discover Us</a>
       </div>
     </header>
+    <main>
+      <section class="section-about">
+        <div class="u-center-text u-margin-bottom-big">
+          <h2 class="heading-secondary">About Us</h2>
+        </div>
+        <div class="row">
+          <div class="col-1-of-2">
+            <h3 class="heading-tertiary u-margin-bottom-small">
+              Why choose us?
+            </h3>
+            <p class="paragraph">
+              Beacause we pride ourselves on being the most loved Furniture
+              store in the world. We've got everything from couches to beds, to
+              dinning tables, and much more.
+            </p>
+            <h3 class="heading-tertiary u-margin-bottom-small">
+              Who are we exactly?
+            </h3>
+            <p class="paragraph">
+              We're a family-owned business, and we're proud to say that we've
+              got a great team of people who love to work together. We're always
+              looking for new and exciting ways to help our customers.
+            </p>
+            <a href="#" class="btn-text">Learn More &rarr;</a>
+          </div>
+          <div class="col-1-of-2">image</div>
+        </div>
+      </section>
+    </main>
     <!-- <section class="grid-test">
       <div class="row">
         <div class="col-1-of-2">col 1 of 2</div>
