Add about section images
 - Add styling for the images
 - Add images to the img folder
 - Add links to images
 - Add animations to the images

--- a/index.html
+++ b/index.html
@@ -55,7 +55,26 @@
             </p>
             <a href="#" class="btn-text">Learn More &rarr;</a>
           </div>
-          <div class="col-1-of-2">image</div>
+          <div class="col-1-of-2">
+            <div class="composition">
+              <img
+                src="img/hero2.jpg"
+                alt="photo 2"
+                class="composition__photo composition__photo--p2"
+              />
+              <img
+                src="img/hero1.jpg"
+                alt="photo 1"
+                class="composition__photo composition__photo--p1"
+              />
+
+              <img
+                src="img/hero3.jpg"
+                alt="photo 3"
+                class="composition__photo composition__photo--p3"
+              />
+            </div>
+          </div>
         </div>
       </section>
     </main>
