Add gallery section
 - Delete bloat files in img folder
 - Add images to images folder
 - Create links to the images in the html folders
 - Add classes to the images and style them
 - Add animations to the images

--- a/index.html
+++ b/index.html
@@ -77,6 +77,60 @@
           </div>
         </div>
       </section>
+      <section class="section-gallery">
+        <div class="u-center-text u-margin-bottom-big">
+          <h2 class="heading-secondary">Our Gallery</h2>
+        </div>
+        <div class="row">
+          <div class="col-2-of-4">
+            <div class="gallery">
+              <img
+                src="img/dinningset-12.jpg"
+                alt="dinning"
+                class="gallery__set gallery__set--1"
+              />
+            </div>
+          </div>
+          <div class="col-1-of-4">
+            <img
+              src="img/comfychair.jpg"
+              alt="chair"
+              class="gallery__set gallery__set--1"
+            />
+          </div>
+          <div class="col-1-of-4">
+            <img
+              src="img/cupboard.jpg"
+              alt="cupboard"
+              class="gallery__set gallery__set--1"
+            />
+          </div>
+        </div>
+        </div>
+        <div class="row">
+          <div class="col-1-of-4">
+            <img
+              src="img/couch.jpg"
+              alt="cupboard"
+              class="gallery__set gallery__set--1"
+            />
+          </div>
+          <div class="col-1-of-4">
+            <img
+              src="img/chairs.jpg"
+              alt="cupboard"
+              class="gallery__set gallery__set--1"
+            />
+          </div>
+          <div class="col-2-of-4">
+            <img
+              src="img/leather-couch-1.jpg"
+              alt="cupboard"
+              class="gallery__set gallery__set--1"
+            />
+          </div>
+        </div>
+      </section>
     </main>
     <!-- <section class="grid-test">
       <div class="row">
