Add background solid gradient and image

--- a/index.html
+++ b/index.html
@@ -131,6 +131,14 @@
           </div>
         </div>
       </section>
+      <section class="section-contact">
+        <div class="row">
+          <div class="contact">
+             
+          </div>
+        </div>
+      </section>
+
     </main>
     <!-- <section class="grid-test">
       <div class="row">
