Add contact section

--- a/index.html
+++ b/index.html
@@ -132,9 +132,29 @@
         </div>
       </section>
       <section class="section-contact">
+
         <div class="row">
           <div class="contact">
-             
+             <div class="contact__form">
+              <form action="#" class="form">
+                <div class=" u-margin-bottom-medium">
+                  <h3 class="heading-secondary">Contact Us</h3>
+                </div>
+                <div class="form__group">
+                  <input type="text" class="form__input" placeholder="Full Name" id="name" required>
+                  <label for="name" class="form__label">Full Name</label>
+                </div>
+                <div class="form__group">
+                  <input type="email" class="form__input" placeholder="Email address" id="email" required>
+                  <label for="email" class="form__label">Email address</label>
+                  <textarea class="form__input" placeholder="Enter Message" id="Message" required></textarea>
+                  <label for="email" class="form__label">Enter Your Message</label>
+                </div>
+                <div class="form__group">
+                  <button class="btn btn--green">Send Message &rarr;</button>
+                </div>
+              </form>
+             </div>
           </div>
         </div>
       </section>
